--- a/flights-service/build.gradle
+++ b/flights-service/build.gradle
@@ -29,6 +29,7 @@ ext {
 }
 
 dependencies {
+    implementation('org.springframework.cloud:spring-cloud-starter-openfeign')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-data-rest')
     implementation('org.springframework.boot:spring-boot-starter-web')
