--- a/flights-service/build.gradle
+++ b/flights-service/build.gradle
@@ -1,13 +1,18 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.5.RELEASE'
+        springBootVersion = '2.0.6.RELEASE'
     }
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("com.diffplug.spotless:spotless-plugin-gradle:3.16.0")
     }
+}
+
+plugins {
+    id "com.diffplug.gradle.spotless" version "3.16.0"
 }
 
 apply plugin: 'java'
@@ -23,19 +28,16 @@ repositories {
     mavenCentral()
 }
 
-
 ext {
     springCloudVersion = 'Finchley.SR1'
 }
 
+
 dependencies {
-    implementation('org.springframework.cloud:spring-cloud-starter-openfeign')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation('org.springframework.boot:spring-boot-starter-data-rest')
     implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('org.springframework.cloud:spring-cloud-starter-config')
-    implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
-    implementation('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
+    implementation('org.springframework.cloud:spring-cloud-starter-openfeign')
+    compile('com.google.googlejavaformat:google-java-format:1.6')
     runtimeOnly('com.h2database:h2')
     compileOnly('org.projectlombok:lombok')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
@@ -44,5 +46,11 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
+spotless {
+    java {
+        googleJavaFormat()
     }
 }
