--- a/flights-service/build.gradle
+++ b/flights-service/build.gradle
@@ -34,12 +34,16 @@ ext {
 
 
 dependencies {
+    compile('org.springframework.cloud:spring-cloud-config-server:2.0.2.RELEASE')
+    compile('com.google.googlejavaformat:google-java-format:1.6')
+    compile('com.netflix.eureka:eureka-client:1.9.8')
+    compile('io.springfox:springfox-swagger-ui:2.9.2')
+    compile('io.springfox:springfox-swagger2:2.9.2')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.cloud:spring-cloud-starter-openfeign')
-    compile('com.google.googlejavaformat:google-java-format:1.6')
-    runtimeOnly('com.h2database:h2')
     compileOnly('org.projectlombok:lombok')
+    runtimeOnly('com.h2database:h2')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
