--- a/user-account-service/build.gradle
+++ b/user-account-service/build.gradle
@@ -34,11 +34,13 @@ ext {
 
 
 dependencies {
+    compile('org.springframework.cloud:spring-cloud-config-client:2.0.2.RELEASE')
+    compile('com.google.googlejavaformat:google-java-format:1.6')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
-    compile('com.google.googlejavaformat:google-java-format:1.6')
-    runtimeOnly('com.h2database:h2')
+    implementation('org.springframework.cloud:spring-cloud-starter-openfeign')
     compileOnly('org.projectlombok:lombok')
+    runtimeOnly('com.h2database:h2')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
