Adding mockito and jupitor test dependencies.

--- a/user-account-service/build.gradle
+++ b/user-account-service/build.gradle
@@ -41,7 +41,11 @@ dependencies {
     implementation('org.springframework.cloud:spring-cloud-starter-openfeign')
     compileOnly('org.projectlombok:lombok')
     runtimeOnly('com.h2database:h2')
+
+    testCompile('org.junit.jupiter:junit-jupiter-api:5.4.1')
+    testCompile('org.mockito:mockito-junit-jupiter:2.23.0')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+
 }
 
 dependencyManagement {
