--- a/flights-service/build.gradle
+++ b/flights-service/build.gradle
@@ -39,11 +39,15 @@ dependencies {
     compile('com.netflix.eureka:eureka-client:1.9.8')
     compile('io.springfox:springfox-swagger-ui:2.9.2')
     compile('io.springfox:springfox-swagger2:2.9.2')
+    compile('org.springframework.hateoas:spring-hateoas:0.25.1.RELEASE')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.cloud:spring-cloud-starter-openfeign')
     compileOnly('org.projectlombok:lombok')
     runtimeOnly('com.h2database:h2')
+
+    testCompile('org.junit.jupiter:junit-jupiter-api:5.4.1')
+    testCompile('org.mockito:mockito-junit-jupiter:2.23.0')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
