--- a/flights-service/src/main/resources/application.yml
+++ b/flights-service/src/main/resources/application.yml
@@ -6,14 +6,14 @@ spring:
       server:
         git:
           uri: https://github.com/jpassgo/flights-service.git
+
+
 server:
   port: 8080
 
 eureka:
-  instance:
-    hostname: localhost
   client:
     service-url:
-      default-zone: http://localhost:8761/eureka
+      default-zone: http://localhost:8761
     registerWithEureka: true
     fetchRegistry: true
