Adding spring.application.name and setting app to register with eureka.

--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -1,10 +1,14 @@
+spring:
+  application:
+    name: eureka-service
+
 server:
   port: 8761
 
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
 
 logging:
   level:
