--- a/user-account-service/build.gradle
+++ b/user-account-service/build.gradle
@@ -34,8 +34,9 @@ ext {
 
 
 dependencies {
-    compile('org.springframework.cloud:spring-cloud-config-client:2.0.2.RELEASE')
-    compile('com.google.googlejavaformat:google-java-format:1.6')
+    compile group: 'org.springframework.cloud', name:'spring-cloud-config-client', version: '2.0.2.RELEASE'
+    compile group: 'com.google.googlejavaformat', name:'google-java-format', version:'1.6'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version: '1.4.6.RELEASE'
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.cloud:spring-cloud-starter-openfeign')
